@@ -1,4 +1,4 @@
-/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_lzw.c,v 1.12 2002-04-16 13:49:14 dron Exp $ */
+/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_lzw.c,v 1.13 2002-04-16 14:18:16 dron Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -611,6 +611,11 @@ LZWDecodeCompat(TIFF* tif, tidata_t op0, tsize_t occ0, tsample_t s)
 				 */
 				sp->dec_codep = codep;
 				do {
+					if (codep < sp->dec_codetab) {
+						TIFFError(tif->tif_name,
+							"LZWDecode: Corrupted LZW data");
+						return (0);
+					}
 					codep = codep->next;
 				} while (codep->length > occ);
 				sp->dec_restart = occ;
